# degensentinels-oraculo

./: .gitignore  .zshrc  Cargo.toml  README.md  package-lock.json  package.json  requirements.txt
docs/: CONTRACT_ENDPOINTS.md  Plano de Desenvolvimento.md  Roadmap.md
oracle-backend/: alimentar_contrato.py  blockchain.py  cancelar_apolice.py  config.py  listar_apolices.py  main.py  mock_api.py  reativar_apolice.py  register_policy.py  register_policyOld.py  remover_apolice.py  requirements.txt  restaurar_apolice.py  setup_oraculo.sh  weather.py
oracle-backend/Obsoletos/: index.js
smart-contracts/seguro-parametrico/: Cargo.toml  sc-config.toml
smart-contracts/seguro-parametrico/meta/: Cargo.toml
smart-contracts/seguro-parametrico/meta/src/: main.rs
smart-contracts/seguro-parametrico/output/: proxy.rs  seguro_parametrico.abi.json  seguro_parametrico.imports.json  seguro_parametrico.mxsc.json  seguro_parametrico.wasm
smart-contracts/seguro-parametrico/src/: seguro_parametrico.rs  seguro_parametrico_proxy.rs
smart-contracts/seguro-parametrico/tests/: seguro_parametrico_blackbox_test.rs
smart-contracts/seguro-parametrico/wasm/: Cargo.toml
smart-contracts/seguro-parametrico/wasm/src/: lib.rs
smart-contracts/seguro_parametrico_sc/: Cargo.toml  multicontract.toml
smart-contracts/seguro_parametrico_sc/meta/: Cargo.toml
smart-contracts/seguro_parametrico_sc/meta/scenarios/: register_policy.json
smart-contracts/seguro_parametrico_sc/src/: lib.rs  proxy.rs  seguro_parametrico.rs
smart-contracts/seguro_parametrico_sc/tests/: sim.rs
(+29 files in other folders)
