[package]
name = "seguro_parametrico_sc"
version = "0.1.0"
edition = "2021"
authors = ["Uederson Ferreira <uedersonferreira@gmail.com>"]
description = "Smart contract para seguro paramétrico na rede MultiversX"
license = "MIT"
publish = false

[dependencies]
multiversx-sc = "0.57.1"         # ou a versão que a documentação recomendar
multiversx-sc-derive = "0.57.1"   # geralmente vem junto com o multiversx_sc

[dev-dependencies]
multiversx-sc-scenario = "0.57.1"

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols" 

[package.metadata.elrond_wasm]
contract = true
